fixing the form gaps

--- a/css/contactus.css
+++ b/css/contactus.css
@@ -73,6 +73,7 @@ form {
 }
 
 label {
+    margin-top: 10px;
     font-weight: bold;
     margin-bottom: 5px;
     color: rgb(255, 247, 247);
